added meta description

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="Description" content="Jeff Sawyer's Portfolio">
 	<title>Jeff Sawyer's Portfolio</title>
 	<link href="https://fonts.googleapis.com/css?family=Pacifico|Teko" rel="stylesheet">
 	<base href="/">
