--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="Description" content="Jeff Sawyer's Portfolio">
-	<title>Jeff Sawyer's Portfolio</title>
+	<title>{{ title }}</title>
 	<link href="https://fonts.googleapis.com/css?family=Pacifico|Teko" rel="stylesheet">
 	<base href="/">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+	<app-root></app-root>
 </body>
 </html>
